--- a/css/New.css
+++ b/css/New.css
@@ -364,6 +364,8 @@ li {
     margin-top: 50px;
     padding: 50px 0 50px 0;
 }
+
+/*  */
 .page .logos .container {
     display: flex;
     justify-content: space-between;
